// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-15f1fu6 e183qit0"
    color="primary"
    shape="round"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 1`] = `
<div>
  <button
    class="css-1b9wjjc e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 2`] = `
<div>
  <button
    class="css-1b9wjjc e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-9tyo2z e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-3a4sd6 e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;
